[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/gui/TimeLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/theme/home_theme.tres" type="Theme" id=3]
[ext_resource path="res://game/gui/hud/StatLine.gd" type="Script" id=4]
[ext_resource path="res://assets/theme/game_theme.tres" type="Theme" id=6]
[ext_resource path="res://assets/icons/icon_hud_wins_VRSA.tres" type="Texture" id=7]

[node name="StatLine" type="HBoxContainer"]
margin_right = 733.0
margin_bottom = 57.0
rect_min_size = Vector2( 0, 56 )
theme = ExtResource( 6 )
custom_constants/separation = 0
script = ExtResource( 4 )
stat_name = "Stat"

[node name="Icon" type="TextureRect" parent="."]
visible = false
margin_top = 8.0
margin_right = 40.0
margin_bottom = 48.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
stretch_mode = 5

[node name="Name" type="Label" parent="."]
margin_top = 4.0
margin_right = 93.0
margin_bottom = 52.0
grow_horizontal = 0
theme = ExtResource( 3 )
text = "Stat "

[node name="Label" type="Label" parent="."]
margin_left = 93.0
margin_top = 4.0
margin_right = 150.0
margin_bottom = 52.0
text = "00"

[node name="TimeLabel" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = 150.0
margin_top = 0.0
margin_right = 351.0
margin_bottom = 57.0
theme = null

[node name="CountIcons" type="HBoxContainer" parent="."]
margin_left = 150.0
margin_right = 150.0
margin_bottom = 57.0
rect_min_size = Vector2( 0, 40 )
custom_constants/separation = -1

[node name="Icon" type="TextureRect" parent="CountIcons"]
visible = false
margin_right = 48.0
margin_bottom = 57.0
texture = ExtResource( 7 )

[node name="Icon_2" type="TextureRect" parent="CountIcons"]
visible = false
margin_right = 48.0
margin_bottom = 57.0
texture = ExtResource( 7 )

[node name="Icon_3" type="TextureRect" parent="CountIcons"]
visible = false
margin_right = 48.0
margin_bottom = 57.0
texture = ExtResource( 7 )

[node name="Icon_4" type="TextureRect" parent="CountIcons"]
visible = false
margin_right = 48.0
margin_bottom = 57.0
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="BlinkTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
